--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,6 +59,8 @@
   "files.associations": {
     "*.html": "html",
     "iostream": "cpp",
-    "ostream": "cpp"
+    "ostream": "cpp",
+    "iosfwd": "cpp",
+    "new": "cpp"
   }
 }
